--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --clear",
     "android": "expo start --android",
     "build": "eas build --platform android --profile development --local",
     "ios": "expo start --ios",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
