implemented bottom navigation bar

--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     "jsEngine": "hermes",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "cover",
+      "resizeMode": "contain",
       "backgroundColor": "#E3342F"
     },
     "assetBundlePatterns": [
