--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "userInterfaceStyle": "automatic",
     "jsEngine": "hermes",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-with-background.png",
       "resizeMode": "cover",
       "backgroundColor": "#E3342F"
     },
