splash screen changes and added animation

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "jsEngine": "hermes",
     "splash": {
       "image": "./assets/splash-with-background.png",
-      "resizeMode": "native",
+      "resizeMode": "cover",
       "backgroundColor": "#E3342F"
     },
     "assetBundlePatterns": [
@@ -30,7 +30,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#E3342F"
       },
       "package": "com.quotebox",
       "versionCode": 1
